--- a/MvcApplication2/MvcApplication2/MvcApplication2.csproj
+++ b/MvcApplication2/MvcApplication2/MvcApplication2.csproj
@@ -192,6 +192,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\CUSTOMER_RECORDS.cs">
+      <DependentUpon>smoothdb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MEMBER_INFO.cs">
+      <DependentUpon>smoothdb.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -207,6 +213,21 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\smoothdb.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>smoothdb.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\smoothdb.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>smoothdb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\smoothdb.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>smoothdb.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\Table.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -217,6 +238,10 @@
     <Content Include="App_Data\message.mdf" />
     <Content Include="App_Data\message_log.ldf">
       <DependentUpon>message.mdf</DependentUpon>
+    </Content>
+    <Content Include="App_Data\smoothdb.mdf" />
+    <Content Include="App_Data\smoothdb_log.ldf">
+      <DependentUpon>smoothdb.mdf</DependentUpon>
     </Content>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -281,6 +306,13 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <EntityDeploy Include="Models\smoothdb.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>smoothdb.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\smoothdb.edmx.diagram">
+      <DependentUpon>smoothdb.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -291,6 +323,16 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\smoothdb.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>smoothdb.edmx</DependentUpon>
+      <LastGenOutput>smoothdb.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\smoothdb.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>smoothdb.edmx</DependentUpon>
+      <LastGenOutput>smoothdb.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
