--- a/MvcApplication2/MvcApplication2/MvcApplication2.csproj
+++ b/MvcApplication2/MvcApplication2/MvcApplication2.csproj
@@ -195,10 +195,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\ContentModels.cs" />
     <Compile Include="Models\CUSTOMER_RECORDS.cs">
       <DependentUpon>smoothdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\MEMBER_INFO.cs">
+      <DependentUpon>smoothdb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MEMBER_INFO2.cs">
       <DependentUpon>smoothdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Model1.Context.cs">
@@ -233,6 +237,9 @@
     </Compile>
     <Compile Include="Models\Table.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Table2.cs">
+      <DependentUpon>smoothdb.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\SmoothDBService.cs" />
